tests/codegen/fail/interface/trait/field_non_output_return_type.stderr
error[E0277]: the trait bound `ObjB: IsOutputType<__S>` is not satisfied
 --> fail/interface/trait/field_non_output_return_type.rs:8:1
  |
8 | #[graphql_interface]
  | ^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `IsOutputType<__S>` is not implemented for `ObjB`
 --> fail/interface/trait/field_non_output_return_type.rs:4:1
  |
4 | pub struct ObjB {
  | ^^^^^^^^^^^^^^^
  = help: the following other types implement trait `IsOutputType<S>`:
            `&T` implements `IsOutputType<S>`
            `Arc<T>` implements `IsOutputType<S>`
            `ArcStr` implements `IsOutputType<__S>`
            `Argument<S>` implements `IsOutputType<S>`
            `Box<T>` implements `IsOutputType<S>`
            `CharacterValueEnum` implements `IsOutputType<__S>`
            `EnumValue` implements `IsOutputType<__S>`
            `ID` implements `IsOutputType<__S>`
          and $N others
